# microscope_light

./: .gitignore  .gitmodules
firmware/: Cargo.toml  README.md  memory.x
firmware/src/: main.c  main.rs  ws2812.c  ws2812.elf
microscope_light_leds/: microscope_light_leds-cache.lib  microscope_light_leds.bak  microscope_light_leds.kicad_pcb  microscope_light_leds.pro  microscope_light_leds.sch
microscope_light_power/: fp-lib-table  microscope_light_power-cache.lib  microscope_light_power.bak  microscope_light_power.kicad_pcb  microscope_light_power.pro  microscope_light_power.sch  sym-lib-table
