[package]
authors = ["Jon Neal <Jon.D.Neal@gmail.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Firmware for my custom microscope LED light ring"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "MIT OR Apache-2.0"
name = "microscope_light_controller"
repository = "https://github.com/reportingsjr/microscope_light"
version = "0.0.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cortex-m]
version = "0.3.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.cortex-m-semihosting]
version = "0.2.0"

[dependencies.stm32f407]
version = "0.1.0"

[profile.release]
debug = true
lto = true
